# ImageUntangler

./: .gitignore  CLI.spec  CONFIG.md  CompileDebug.spec  MainWindow.spec  README.md  Release_Notes.md  config.ini  config.ini.bak  config.json  cprofile.txt  default_config.ini  env.yml  environment.yml  imageuntangler.spec  main.py  metadata.db  onefile_imageuntangler.spec  pyproject.toml  report.csv  requirements.txt  specfile.txt  split_cases.py
.run/: Template Python.run.xml
AlgorithmTests/shortest_path/: case_6_test.ipynb  case_6_test.py
CSS/: AddFilesButton.css  AlertMessage.css  DefaultBackground.css  TabManager.css
MRICenterline/: __init__.py  message_box.py
MRICenterline/BulkFolderScanner/: ProgressWidget.py  Scanner.py  __init__.py
MRICenterline/CenterlinePanel/: __init__.py
MRICenterline/CommandLineInterface/: __init__.py
MRICenterline/Config/: ConfigParserRead.py  DialogBox.py  InitialConfigBox.py  MetadataDatabaseSetup.py  PreferencesWidget.py  __init__.py  default_config.ini
MRICenterline/FileReaders/: AbstractReader.py
MRICenterline/Interface/: __init__.py
MRICenterline/Loader/: LoadDialog.py  LoadPoints.py
MRICenterline/MainWindow/: CustomOpenDialog.py  DefaultTabWidget.py  MenuBar.py  StatusBar.py  Tab.py  TabManager.py  __init__.py
MRICenterline/PatientInfo/: CommentText.py  PatientTable.py  __init__.py
MRICenterline/Points/: ConvertAnnotationToSimpleITK.py  LoadPoints.py  (+7 more)
config/: config.json
docs/: advanced_configuration.md  build.md  commandline_usage.md  configuration.md  eer_diagram.mwb  eer_diagram.mwb.bak  feature_notes.md  index.md  maintenance_notes.md  metadata.md
notebooks/: sitk_test.ipynb  transform_to_sitk.py
src/: AxialCoronalViewer.py  AxialViewerInteractorStyle.py  ImageProperties.py  MPRInteractor.py  MPRViewer.py  MPRViwerProp.py  MPRWindow.py  MRISequenceViewer.py  MainWindow.py  PointCollection.py  ViewerProp.py  ViewerProperties.py  getListOfFiles.py  getMPR.py
(+306 files in other folders)
