[tool.poetry]
name = "ImageUntangler"
version = "4.5.0"
description = "Developed by the Technion Computational MRI lab, this program reads DICOM MRI images and presents a user-friendly interface for radiologists to measure lengths and generate centerlines."
authors = ["Angeleene Ang <ang.a@technion.ac.il>", "Yael Zaffrani", "Avraham Kahan", "Moti Freiman"]

[tool.poetry.dependencies]
python = "~3.9"

# UI
vtk = "^9.1.0"
PyQt5 = "^5.15.6"
PyQt5-stubs = "^5.15.2"
QtAwesome = "^1.1.1"

# data handling
pydicom = "^2.2.2"
SimpleITK = "^2.1.1"
pynrrd = "^0.4.2"

pandas = "^1.4.0"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
scipy = "^1.8.0"
tqdm = "^4.62.3"
torch= "1.13.1"

# exporters
openpyxl = "3.0.10"
jupyter = "^1.0.0"
ipykernel = "^6.9.0"

# distribution
pyinstaller = "^4.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
